Added forgot password & reset password pages

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -10,6 +10,8 @@ nav {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    position: absolute;
+    top: 0%;
 }
 
 .navbar-links-container {
