--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,10 @@ body {
     margin-left: 5px;
 }
 
+.hide-desktop{
+    display: none !important;
+}
+
 
 /* vertical tab  */
 @media screen and (min-width: 769px) and (max-width: 991px) {
