--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -6,12 +6,11 @@
 
 nav {
     height: 80px;
+    width: 100%;
     background-color: var(--color-1);
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    position: absolute;
-    top: 0%;
 }
 
 .navbar-links-container {
