--- a/src/pages/Register/register.css
+++ b/src/pages/Register/register.css
@@ -35,6 +35,12 @@
     text-align: center;
 }
 
+.register-h3{
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-align: center;
+}
+
 
 .register-form{
     margin-top: 40px;
@@ -102,6 +108,8 @@
     color: #333;
     margin: 0 auto;
 }
+
+
 
 
 @media screen and (max-width: 768px) {
