--- a/public/style.css
+++ b/public/style.css
@@ -34,14 +34,45 @@ body {
     display: none !important;
 }
 
+.hide-tablet{
+    display: block !important;
+}
+
+.hide-mobile{
+    display: block !important;
+}
+
+.cursor-pointer{
+    cursor: pointer;
+}
+
 
 /* vertical tab  */
 @media screen and (min-width: 769px) and (max-width: 991px) {
+    .hide-desktop{
+        display: block !important;;
+    }
 
+    .hide-tablet{
+        display: none !important;
+    }
+
+    .hide-mobile{
+        display: block !important;
+    }
 }
 
 
 @media screen and (max-width: 768px) {
+
+    .hide-desktop{
+        display: block !important;;
+    }
+
+    .hide-tablet{
+        display: block !important;
+    }
+
     .hide-mobile{
         display: none !important;
     }
