--- a/src/pages/BookingForms/CleanerBooking/cleanerBooking.css
+++ b/src/pages/BookingForms/CleanerBooking/cleanerBooking.css
@@ -7,6 +7,14 @@
   box-shadow: 0px 1px 1px #b7d3d3;
 }
 
+.back-button-div{
+  width: fit-content;
+  border-radius: 50%;
+  padding: 5px;
+  background-color: #F0FBF9;
+  cursor: pointer;
+  margin-left: -15px;
+}
 
 .cleaner-booking-form-container {
   background-color: white;
@@ -68,7 +76,7 @@
 }
 
 .cleaner-booking-form-btn{
-  width: 100%;
+  width: 200px;
   background-color: #58BBA6;
   color: white;
   padding: 10px 0;
@@ -275,13 +283,13 @@
 
 @media screen and (min-width: 769px) and (max-width: 991px) {
   .cleaner-booking-summary-card{
-    height: fit-content;
+    height: 100vh;
     background-color: white;
     padding: 15px 20px 100% 20px;
     box-shadow: 2px 4px 10px 2px #b7d3d3;
     width: 100%;
     position: fixed;
-    top: 88%;
+    top: 94%;
     z-index: 10;
 
     transition: 0.5s ease-in-out;
@@ -314,13 +322,13 @@
   }
 
   .cleaner-booking-summary-card{
-    height: fit-content;
+    height: 100vh;
     background-color: white;
     padding: 15px 20px 100% 20px;
     box-shadow: 2px 4px 10px 2px #b7d3d3;
     width: 100%;
     position: fixed;
-    top: 80%;
+    top: 90%;
     z-index: 10;
 
     transition: 0.5s ease-in-out;
