--- a/public/style.css
+++ b/public/style.css
@@ -57,6 +57,10 @@ body {
     color: #0a9891;
 }
 
+.text-bold{
+    font-weight: 500;
+}
+
 
 /* vertical tab  */
 @media screen and (min-width: 769px) and (max-width: 991px) {
