Added Invoice Generation function

--- a/src/pages/BookingDetails/bookingDetails.css
+++ b/src/pages/BookingDetails/bookingDetails.css
@@ -9,3 +9,7 @@
     background-color: white;
     box-shadow: 2px 4px 10px 2px #b7d3d3;
 }
+
+.booking-details-padding-right{
+    padding-right: 20px;
+}
