--- a/public/style.css
+++ b/public/style.css
@@ -61,6 +61,22 @@ body {
     font-weight: 500;
 }
 
+.color-white{
+    color: white;
+}
+
+.color-black{
+    color: black;
+}
+
+.no-decoration{
+    text-decoration: none;
+}
+
+.color-34AFAA{
+    color: #34AFAA;
+}
+
 
 /* vertical tab  */
 @media screen and (min-width: 769px) and (max-width: 991px) {
