--- a/public/style.css
+++ b/public/style.css
@@ -77,6 +77,11 @@ body {
     color: #34AFAA;
 }
 
+.list-style-type-none{
+    list-style-type: none;
+    padding: 0;
+}
+
 
 /* vertical tab  */
 @media screen and (min-width: 769px) and (max-width: 991px) {
